--- a/package.json
+++ b/package.json
@@ -36,6 +36,8 @@
     "react-intl": "^2.4.0",
     "react-redux": "5.0.7",
     "react-router-dom": "^4.3.1",
-    "redux": "4.0.0"
+    "redux": "4.0.0",
+    "webpack": "^1.12.9",
+    "webpack-dev-server": "^1.14.0"
   }
 }
